Fixed hero image and text alignment.

--- a/style.css
+++ b/style.css
@@ -68,8 +68,8 @@ p {
     margin-left: auto;
     display: block;
     font-size: 5em;
-    margin: 0.75em;
-    margin-top: 1em;
+    margin: 0.5em;
+    margin-top: 0em;
     color: #093FB4;
 }
 
